--- a/FlippyWindow.rc
+++ b/FlippyWindow.rc
@@ -2,22 +2,60 @@
 // This file is distributed under the MIT licence. For more information,
 // please refer to the accompanying "LICENCE" file.
 
+
+#include <windows.h>
+
 #include "FlippyWindow.h"
 
+
 FLIPPYWINDOWMENU MENU
-{
+BEGIN
   POPUP "&File"
-  {
+  BEGIN
     // TODO: Implement these menu options.
     MENUITEM "Flip &horizontally", ID_HORIZONTAL, CHECKED, INACTIVE
     MENUITEM "Flip &vertically", ID_VERTICAL, INACTIVE
     MENUITEM SEPARATOR
     MENUITEM "&Exit", ID_EXIT
-  }
+  END
 
   POPUP "&Help"
-  {
+  BEGIN
     // TODO: Implement menu option.
     MENUITEM "&Visit FlippyWindow homepage", ID_HOMEPAGE, INACTIVE
-  }
-}
+  END
+END
+
+
+VS_VERSION_INFO VERSIONINFO
+  FILEVERSION 0, 1, 0, 0
+  PRODUCTVERSION 0, 1, 0, 0
+  FILEFLAGSMASK VS_FF_DEBUG
+  FILEFLAGS 0x0L
+#ifdef _DEBUG
+  | VS_FF_DEBUG
+#endif
+  FILEOS VOS_NT
+  FILETYPE VFT_APP
+  FILESUBTYPE 0x0L
+  BEGIN
+    BLOCK "StringFileInfo"
+    BEGIN
+      BLOCK "080904B0" // U.K. English and Unicode.
+      BEGIN
+        VALUE "CompanyName", "Damien Dart"
+        VALUE "FileDescription", "Horizontally flip part of the screen."
+        VALUE "FileVersion", "0.1"
+        VALUE "InternalFilename", "FlippyWindow"
+        VALUE "LegalCopyright", "Copyright \251 2016 Damien Dart."
+        VALUE "OriginalFilename", "FlippyWindow.exe"
+        VALUE "ProductName", "FlippyWindow"
+        VALUE "ProductVersion", "0.1"
+      END
+    END
+    BLOCK "VarFileInfo"
+    BEGIN
+      VALUE "Translation", 0x0809, 1200 // U.K. English and Unicode.
+    END
+  END
+END
