Add gubbins to simplify version number change.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,11 @@
 # please refer to the accompanying "LICENCE" file.
 
 project("FlippyWindow")
-add_executable(FlippyWindow WIN32 FlippyWindow.cpp FlippyWindow.h FlippyWindow.rc)
+set(VERSION_MAJOR 0)
+set(VERSION_MINOR 1)
+configure_file(
+  "${PROJECT_SOURCE_DIR}/FlippyWindow.h.in"
+  "${PROJECT_SOURCE_DIR}/FlippyWindow.h")
+include_directories("${PROJECT_SOURCE_DIR}")
+add_executable(FlippyWindow WIN32 FlippyWindow.cpp FlippyWindow.rc)
 target_link_libraries(FlippyWindow magnification.lib)
