--- a/FlippyWindow.h.in
+++ b/FlippyWindow.h.in
@@ -8,6 +8,9 @@
 #define ID_EXIT 1003
 #define ID_VERTICAL 1004
 
+#define VERSION_BINARY @VERSION_MAJOR@, @VERSION_MINOR@, 0, 0
+#define VERSION_STRING "@VERSION_MAJOR@.@VERSION_MINOR@"
+
 #define WIN32_LEAN_AND_MEAN
 #ifndef _WIN32_WINNT
 #define _WIN32_WINNT 0x0600
