--- a/FlippyWindow.rc
+++ b/FlippyWindow.rc
@@ -21,6 +21,8 @@ BEGIN
 
   POPUP "&Help"
   BEGIN
+    MENUITEM VERSION_STRING_FULL, ID_VERSION, INACTIVE
+    MENUITEM SEPARATOR
     // TODO: Implement menu option.
     MENUITEM "&Visit FlippyWindow homepage", ID_HOMEPAGE, INACTIVE
   END
