--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,8 @@
 # This file is distributed under the MIT licence. For more information,
 # please refer to the accompanying "LICENCE" file.
 
+cmake_minimum_required (VERSION 2.6)
+
 project("FlippyWindow")
 set(VERSION_MAJOR 0)
 set(VERSION_MINOR 1)
