--- a/FlippyWindow.rc
+++ b/FlippyWindow.rc
@@ -12,13 +12,14 @@ FLIPPYWINDOWMENU MENU
 BEGIN
   POPUP "&File"
   BEGIN
+    MENUITEM "&Exit", ID_EXIT
+  END
+  POPUP "&Options"
+  BEGIN
     // TODO: Implement these menu options.
     MENUITEM "Flip &horizontally", ID_HORIZONTAL, CHECKED, INACTIVE
     MENUITEM "Flip &vertically", ID_VERTICAL, INACTIVE
-    MENUITEM SEPARATOR
-    MENUITEM "&Exit", ID_EXIT
   END
-
   POPUP "&Help"
   BEGIN
     MENUITEM VERSION_STRING_FULL, ID_VERSION, INACTIVE
