Add an application icon.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,5 +11,6 @@ configure_file(
   "${PROJECT_SOURCE_DIR}/FlippyWindow.h.in"
   "${PROJECT_SOURCE_DIR}/FlippyWindow.h")
 include_directories("${PROJECT_SOURCE_DIR}")
-add_executable(FlippyWindow WIN32 FlippyWindow.cpp FlippyWindow.rc)
+add_executable(FlippyWindow WIN32
+    FlippyWindow.cpp FlippyWindow.ico FlippyWindow.rc)
 target_link_libraries(FlippyWindow magnification.lib)
