--- a/FlippyWindow.h.in
+++ b/FlippyWindow.h.in
@@ -2,6 +2,7 @@
 // This file is distributed under the MIT licence. For more information,
 // please refer to the accompanying "LICENCE" file.
 
+#define FLIPPYWINDOWICON 100
 #define FLIPPYWINDOWMENU 101
 #define ID_HOMEPAGE 1001
 #define ID_HORIZONTAL 1002
