--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,15 @@ cmake_minimum_required (VERSION 2.6)
 project("FlippyWindow")
 set(VERSION_MAJOR 0)
 set(VERSION_MINOR 1)
+# Tweak run-time library options to use static versions so we don't have
+# to faff around with all that "Visual C++ Redistributable" stuff.
+foreach(flags
+    CMAKE_CXX_FLAGS CMAKE_CXX_FLAGS_DEBUG CMAKE_CXX_FLAGS_RELEASE
+    CMAKE_CXX_FLAGS_MINSIZEREL CMAKE_CXX_FLAGS_RELWITHDEBINFO)
+ if(${flags} MATCHES "/MD")
+    string(REGEX REPLACE "/MD" "/MT" ${flags} "${${flags}}")
+ endif(${flags} MATCHES "/MD")
+endforeach(flags)
 configure_file(
   "${PROJECT_SOURCE_DIR}/FlippyWindow.h.in"
   "${PROJECT_SOURCE_DIR}/FlippyWindow.h")
