Update operating system requirements.
Turns out that FlippyWindow only works with the second release of the
Magnification API, which was introduced in Windows 8.

--- a/FlippyWindow.h.in
+++ b/FlippyWindow.h.in
@@ -16,5 +16,8 @@
 
 #define WIN32_LEAN_AND_MEAN
 #ifndef _WIN32_WINNT
-#define _WIN32_WINNT 0x0600
+#define _WIN32_WINNT _WIN32_WINNT_WIN8
+#endif
+#ifndef WINVER
+#define WINVER _WIN32_WINNT_WIN8
 #endif
