--- a/FlippyWindow.h.in
+++ b/FlippyWindow.h.in
@@ -10,9 +10,9 @@
 #define ID_VERTICAL 1004
 #define ID_VERSION 1005
 
-#define VERSION_BINARY @VERSION_MAJOR@, @VERSION_MINOR@, 0, 0
-#define VERSION_STRING "@VERSION_MAJOR@.@VERSION_MINOR@"
-#define VERSION_STRING_FULL "FlippyWindow v@VERSION_MAJOR@.@VERSION_MINOR@"
+#define VERSION_BINARY @VERSION_MAJOR@, @VERSION_MINOR@, @VERSION_PATCH@, 0
+#define VERSION_STRING "@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
+#define VERSION_STRING_FULL "FlippyWindow v@VERSION_MAJOR@.@VERSION_MINOR@.@VERSION_PATCH@"
 
 #define WIN32_LEAN_AND_MEAN
 #ifndef _WIN32_WINNT
