--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Copyright (C) Damien Dart, <damiendart@pobox.com>.
+# This file is distributed under the MIT licence. For more information,
+# please refer to the accompanying "LICENCE" file.
+
 FlippyWindow.h
 FlippyWindow.ico
 tmp*.png
